[gd_scene load_steps=2 format=3 uid="uid://cw3tc8fj3j8xm"]

[ext_resource type="Script" path="res://Functionality/Scripts/character_select.gd" id="1_gqmt3"]

[node name="Character_select" type="Node2D"]
script = ExtResource("1_gqmt3")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.439049, 0.439049, 0.439049, 1)

[node name="Button1" type="Button" parent="."]
offset_left = 50.0
offset_top = 35.0
offset_right = 118.0
offset_bottom = 125.0
text = "Character 1"

[node name="Button2" type="Button" parent="."]
offset_left = 168.0
offset_top = 35.0
offset_right = 236.0
offset_bottom = 125.0
text = "Character 2"

[node name="Button3" type="Button" parent="."]
offset_left = 286.0
offset_top = 35.0
offset_right = 354.0
offset_bottom = 125.0
text = "Character 3"

[node name="Button4" type="Button" parent="."]
offset_left = 404.0
offset_top = 35.0
offset_right = 472.0
offset_bottom = 125.0
text = "Character 4"

[node name="Button5" type="Button" parent="."]
offset_left = 522.0
offset_top = 35.0
offset_right = 590.0
offset_bottom = 125.0
text = "Character 5"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
